data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_978.wast
;; 9. **Error Handling in Function Call within a Br Block:**    - Design a `block` containing a function call (`call`) which triggers an error (e.g. divide by zero) followed by a `br` instruction to a recovery block. Verify that all ephemeral state such as operand stack and error handling is correctly managed and the branch behaves consistently.

(assert_invalid
  (module
    (func $error-handling-in-call
      (block (result i32)
        (call $error-function) (br 0)
      )
      (i32.eqz) (drop)
    )
    (func $error-function
      (i32.const 1) (i32.const 0) (i32.div_u) ;; divide by zero error
    )
  )
  "type mismatch"
)